# kmock

./: .pre-commit-config.yaml  README.md  context7.json  pyproject.toml
.github/workflows/: ci.yaml
docs/: assertions.rst  conf.py  effects.rst  ideas.rst  index.rst  intro.rst  kubernetes.rst  requests.rst  streams.rst  usage.rst
docs/_static/: context7.json
docs/kubernetes/: preloading.rst
kmock/: __init__.py  __main__.py  apps.py  boxes.py  dsl.py  enums.py  filtering.py  k8s.py  k8s_views.py  parsing.py  pytest.py  rendering.py  resources.py
kmock/_internal/: apps.py  cli.py  dicts.py  fetching.py  filtering.py  k8s.py  k8s_dicts.py  k8s_views.py  loading.py  parsing.py  references.py  rendering.py
specs/01-resources-fetching/: _fetch_experiment.py  spec.md
tests/: conftest.py  test_doc_examples.py  test_enums.py  test_request_parsing.py
tests/criteria/: test_criteria_checking.py  test_criteria_creation.py  test_criteria_guessing.py  test_criteria_matching.py  test_criteria_merging.py  test_criteria_notations.py  test_criteria_shortcuts.py
tests/dsl/objects/: test_augmenting_path.py  test_object_patching.py  test_object_patching_by_dict.py  test_object_patching_by_json.py  test_resource_array.py
tests/dsl/responses/: test_effects.py
tests/dynamicclient/: conftest.py  test_dynamicclient.py
tests/handlers/: test_errors.py  test_kubernetes.py
tests/k8s-preloading/: test_cli_fetching.py  test_cli_fetching_e2e.py  test_cli_filtering.py  test_loading.py
tests/k8s-preloading/fixtures/: resources.json
tests/references/: test_namespace_selection.py  test_selector_matching.py  test_selector_parsing.py
